# qhuman_entanglementer

./: .gitignore  README.md  event_bus.py  pyproject.toml  quantum_tunnel.py  requirements_mac.txt  requirements_pi.txt  rsync_repeat.sh
jobs/: connect-bt-speaker.sh  led_server.service  pair-bt-speaker.sh  quantum_tunnel.service  reconnect-bt-speaker.sh  rerun-quantum-tunnel.sh  start-quantum-tunnel.sh  start_qunatum_tunnel.sh
leds_experiments/: biblio_pixel.py  effects.py
media/speech/: explain_short_hebrew.json  test.json
src/: audio_manager.py
src/qhuman_entangler/: audio_manager.py  config.py  event_bus.py  leds_manager.py  logger.py  qhuman_entangler.ino  quantum_tunnel.py  shepard_effect.py  speech_generator.py
src/qhuman_entangler/tests/: test_audio_manager.py  test_gpio.py  test_speaker_battery.py
src/tests/: test_audio_manager.py
